--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -3,6 +3,21 @@ body {
 	height: 100%;
 }
 
+a {
+	color: inherit;
+	display: inline-block;
+}
+
+body{
+	font-family: 'Gilroy', sans-serif;
+	font-size: 18px;
+	line-height: 21px;
+	font-weight: 400;
+	color: $accent;
+	overflow-x: hidden;
+	min-width: 300px;
+}
+
 .wrapper {
 	display: flex;
 	flex-direction: column;
@@ -17,10 +32,12 @@ body {
 }
 
 .container{
-  max-width: 1200px;
+  max-width: 1140px;
   margin: 0 auto;
   padding: 0 15px;
 }
+
+
 
 
 
