--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -5,3 +5,235 @@
 @import 'global';
 
 
+
+.hero {
+    background: linear-gradient(0deg, rgba(51, 51, 51, 0.87), rgba(51, 51, 51, 0.87)), url(../images/top-bg.jpg);
+    background-repeat: no-repeat;
+    background-position: top center;
+    background-size: cover;
+    &__inner {
+        padding: 0 15px;
+        min-height: calc(100vh - 110px);
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        padding-bottom: 30px;
+        color: $another;
+    }
+}
+
+.header {
+    padding: 27px 0 30px;
+    &__inner {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+}
+
+.menu {
+    &__list {
+        display: flex;
+    }
+
+    &__list-item {
+        margin-right: 40px;
+
+        &:last-child {
+            margin-right: 0;
+        }
+    }
+
+    &__list-link {
+        color: $another;
+        font-size: 14px;
+        line-height: 21px;
+    }
+}
+
+.logo {
+    padding-left: 126px;
+    padding-right: 100px;
+}
+
+.profile {
+    &__list {
+        display: flex;
+    }
+
+    &__list-item {
+        margin-right: 40px;
+
+        &:last-child {
+            margin-right: 0;
+        }
+    }
+
+    &__list-link {
+        color: $another;
+        font-size: 14px;
+        line-height: 21px;
+    }
+
+    &__label {
+        display: flex;
+    }
+
+    &__form-label-img {
+        margin-right: 12px;
+    }
+
+    &__input {
+        background: transparent;
+        border: none;
+        width: 65px;
+        font-family: 'Gilroy', sans-serif;
+        font-size: 14px;
+        line-height: 21px;
+        font-weight: 400;
+        color: $another;
+
+        &::placeholder {
+            color: rgba(255, 255, 255, 1);
+            font-size: 14px;
+            line-height: 21px;
+            font-weight: 400;
+        }
+    }
+
+    &__list-item-icon {
+        display: flex;
+        align-items: center;
+    }
+
+    &__list-user {
+        margin-right: 25px;
+
+    }
+}
+
+.top {
+    margin-top: auto;
+    text-align: center;
+    margin-bottom: 80px;
+
+    &__title {
+        @extend %title-font;
+        font-size: 36px;
+        line-height: 49px;
+        margin-bottom: 50px;
+    }
+
+    &__btn {
+        padding: 15px 35px;
+        border: 1px solid #FFFFFF;
+        background-color: #333333;
+        font-weight: 500;
+        letter-spacing: 1.8px;
+        text-transform: uppercase;
+    }
+}
+
+.partners {
+    border-top: 1px solid #FFFFFF;
+    padding-top: 30px;
+    margin: 0 -15px;
+    &__inner {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    &__item {
+        padding: 0 15px;
+        position: relative;
+        &::before {
+            content: '';
+            position: absolute;
+            background-image: url(../images/line.svg);
+            height: 60px;
+            width: 2px;
+            left: 0;
+            top: 0;
+        }
+        &:first-child::before {
+            display: none;
+        }
+    }
+}
+
+.assortment{
+    padding: 100px 0 120px;
+    text-align: center;
+    &__pretitle{
+        font-size: 21px;
+        line-height: 30px;
+        margin-bottom: 15px;
+        
+    }
+    &__title{
+        font-size: 30px;
+        line-height: 41px;
+        @extend %title-font;
+        margin-bottom: 60px;
+    }
+    &__buttons{
+        margin-bottom: 75px;
+        padding-right: 6px;
+        display: flex;
+        justify-content: space-between;
+    }
+    &__btn{
+        border: 1px solid #D6D6D6;
+        background-color: #fff;
+        padding: 17px 25px;
+        width: 165px;
+        cursor: pointer;
+        font-weight: 500;
+        letter-spacing: 1.8px;
+        text-transform: uppercase;
+        position: relative;
+        &::before{
+            content: '';
+            position: absolute;
+            border: 1px solid #D6D6D6;
+            height: 57px;
+            width: 165px;
+            z-index: -1;
+            bottom: -6px;
+            right: -6px;
+        }
+    }
+    &__items{
+        display: grid;
+        grid-template-columns: repeat(3, 2fr);
+        grid-gap: 30px;
+    }
+    &__item{
+        position: relative;
+        &::after{
+            content: '';
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(180deg, rgba(180, 180, 180, 0) 20.31%, #333333 100%);
+        }
+        span{
+            position: absolute;
+            text-transform: uppercase;
+            color: $another;
+            font-size: 24px;
+            line-height: 28px;
+            font-weight: 500;
+            letter-spacing: 2.4px;
+            z-index: 5;
+            right: 0;
+            left: 0;
+            bottom: 58px;
+        }
+    }
+    &__img{
+        object-fit: cover;
+    }
+}
