add page product

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -343,7 +343,7 @@
 }
 
 .gallery{
-    padding-bottom: 150px;
+    padding-bottom: 90px;
     text-align: center;
     &__pretitle{
         font-size: 21px;
@@ -387,7 +387,7 @@
 }
 
 .mailing{
-   
+    margin-top: 60px;
     background-image: url(../images/mailing-bg.jpg);
     background-repeat: no-repeat;
     background-position: center;
@@ -778,6 +778,7 @@
 }
 
 .information{
+    margin-bottom: 120px;
     &__inner{
         padding: 0 95px;
         display: flex;
@@ -795,7 +796,6 @@
     &__text{
         font-size: 16px;
         line-height: 24px;
-        margin-bottom: 5px;
         max-height: 240px;
         overflow: hidden;
         position: relative;
@@ -815,8 +815,16 @@
         font-weight: 500;
         letter-spacing: 1.8px;
         text-transform: uppercase;
-        border-bottom: 1px dashed #333;
+        cursor: pointer;
         position: relative;
+        &::after{
+            content: '';
+            position: absolute;
+            border-bottom: 1px dashed #333;
+            width: 213px;
+            bottom: -5px;
+            left: 0;
+        }
     }
     &__items{
         display: grid;
@@ -838,5 +846,67 @@
         font-size: 16px;
         line-height: 24px;
         margin-top: 15px;
+    }
+    &__btn--active{
+        display: none;
+    }
+    &__text--active {
+        max-height: none;
+        margin-bottom: 5px;
+        overflow: visible;
+        &::after {
+            display: none;
+        }
+    }
+}
+
+.catalog{
+    padding-bottom: 60px;
+    text-align: center;
+    &__pretitle{
+        font-size: 21px;
+        line-height: 29px;
+        margin-bottom: 15px;
+    }
+    &__title{
+        @extend %title-font;
+        font-size: 30px;
+        line-height: 41px;
+        margin-bottom: 60px;
+    }
+    &__items{
+        display: flex;
+        justify-content: space-between;
+    }
+    &__item{
+        border: 1px solid #f9f9f9;
+        padding: 35px;
+        transition: all .5s;
+        &:hover{
+            border: 1px solid #D6D6D6;
+        }
+    }
+    &__item-img{
+        margin-bottom: 25px;
+    }
+    &__item-category{
+        max-width: 350px;
+        font-size: 16px;
+        line-height: 24px;
+        display: block;
+    }
+    &__item-brend{
+        display: block;
+        font-size: 24px;
+        line-height: 34px;
+        font-weight: 600;
+        margin-bottom: 15px;
+    }
+    &__item-price{
+        color: $another;
+        border: 1px solid #333;
+        background: #333;
+        padding: 10px 20px;
+        letter-spacing: 1.8px;
     }
 }
