--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -877,6 +877,7 @@
     &__items{
         display: flex;
         justify-content: space-between;
+        text-align: center;
     }
     &__item{
         border: 1px solid #f9f9f9;
@@ -908,5 +909,72 @@
         background: #333;
         padding: 10px 20px;
         letter-spacing: 1.8px;
+    }
+    &__box{
+        padding-bottom: 60px;
+        margin-bottom: 60px;
+        position: relative;
+        &::after{
+            content: '';
+            position: absolute;
+            height: 1px;
+            width: 100%;
+            bottom: 0;
+            right: 0;
+            left: 0;
+            margin: 0 auto;
+            background: #D6D6D6;
+        }
+    }
+    &__btn{
+        text-align: center;
+    }
+    &__btn-link{
+        padding: 15px 35px;
+        color: $another;
+        background-color: #333;
+        margin-top: 60px;
+        text-transform: uppercase;
+    }
+}
+
+.category{
+    padding: 100px 0 150px;
+    &__items{
+        display: flex;
+        margin: 0 -15px 60px 0;
+    }
+    &__item{
+        margin: 0 15px;
+        position: relative;
+        width: calc(100% / 6 - 30px);
+      
+        &::before{
+            content: '';
+            position: absolute;
+            background-image: url(../images/select-arrow.svg);
+            width: 12px;
+            height: 8px;
+            right: 0;
+            top: 7px;
+        }
+    }
+    &__select{
+        width: 100%;
+        font-size: 16px;
+        line-height: 24px;
+        font-weight: 400;
+        color: $accent;
+        padding-bottom: 10px;
+        border: none;
+        border-bottom: 1px solid #D6D6D6;
+        background-color: transparent;
+        appearance: none;
+        position: relative;
+        z-index: 4;
+        cursor: pointer;
+    }
+    &__select-option{
+    
     }
 }
