--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -5,6 +5,9 @@
 @import 'global';
 
 
+body.lock{
+    overflow: hidden;
+}
 
 .hero {
     background: linear-gradient(0deg, rgba(51, 51, 51, 0.87), rgba(51, 51, 51, 0.87)), url(../images/top-bg.jpg);
@@ -21,13 +24,26 @@
         color: $another;
     }
 }
-
+.header-main{
+    background-color: #333;
+}
 .header {
     padding: 27px 0 30px;
     &__inner {
         display: flex;
         align-items: center;
         justify-content: center;
+    }
+    &__adaptive {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        padding: 130px 35px 0;
+        left: 0;
+        top: 0;
+        background-color: #333;
+        z-index: 10;
+        display: none;
     }
 }
 
@@ -262,7 +278,7 @@
     background-position: center;
     text-align: center;
     color: $another;
-    padding: 100px 10px;
+    padding: 100px 15px;
     &__pretitle{
         font-size: 21px;
         line-height: 29px;
@@ -276,7 +292,7 @@
     }
     &__text{
         line-height: 25px;
-        width: 730px;
+        max-width: 730px;
         margin: 0 auto 60px;
     }
     &__btn{
@@ -370,9 +386,8 @@
         }
     }
     &__item-img{
-        max-width: 277.5px;
         width: 100%;
-        height: 300px;
+        height: 100%;
         object-fit: cover;
     }
     &__popup-box{
@@ -384,6 +399,10 @@
         top: 50%;
         transform: translate(-50%, -50%);
     }
+    &__item-popupimg{ 
+        height: 100%;
+        width: 100%;
+    }
 }
 
 .mailing{
@@ -392,7 +411,7 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    padding: 100px 0 120px;
+    padding: 100px 15px 120px;
     color: $another;
     &__inner{
         display: flex;
@@ -978,3 +997,6 @@
     
     }
 }
+
+
+@import 'media';
