--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -906,7 +906,7 @@ body.lock{
             border: 1px solid #D6D6D6;
         }
     }
-    &__item-img{
+    &__item-link{
         margin-bottom: 25px;
     }
     &__item-category{
@@ -984,7 +984,7 @@ body.lock{
         line-height: 24px;
         font-weight: 400;
         color: $accent;
-        padding-bottom: 10px;
+        padding: 0 10px 10px;
         border: none;
         border-bottom: 1px solid #D6D6D6;
         background-color: transparent;
