--- a/app/scss/media.scss
+++ b/app/scss/media.scss
@@ -298,6 +298,16 @@
             
         }
     }
+    .contact{
+        &__inner{
+            flex-wrap: wrap;
+            margin: 0 -15px;
+        }
+        &__item{
+            margin: 0 15px 15px;
+            width: calc();
+        }
+    }
 }
 @media (max-width: 620px){
     .category{
@@ -367,6 +377,22 @@
         }
         &__btn-link{
             margin-top: 20px;
+        }
+    }
+    .contact{
+        &__item{
+            width: calc(100% - 30px);
+            margin-bottom: 40px;
+        }
+        &__inner{
+            padding-bottom: 10px;
+        }
+    }
+    .map{
+        padding-bottom: 0;
+        padding-top: 30px;
+        iframe{
+            height: 350px;
         }
     }
 }
