--- a/app/scss/media.scss
+++ b/app/scss/media.scss
@@ -28,7 +28,7 @@
     }
 }
 
-@media (max-width: 1100px){
+@media (max-width: 1110px){
     .assortment{
         &__buttons{
             display: block;
@@ -48,6 +48,20 @@
         &__item-email,
         &__item-phone{
             display: block;
+        }
+    }
+    .product{
+        &__sliders{
+            max-width: 350px;
+            margin-right: 20px;
+        }
+        &__slider-gallery{
+            height: 400px;
+        }
+    }
+    .product-description{
+        &__inner{
+            padding: 40px 10px;
         }
     }
 }
@@ -181,6 +195,24 @@
             margin-top: 50px;
         }
     }
+    .product{
+        &__inner{
+            display: block;
+        }
+        &__sliders{
+            margin-bottom: 40px;
+            max-width: 100%;
+            margin-right: 0;
+        }
+        &__slider-gallery {
+           max-width: 100%;
+           height: 600px;
+        }
+        &__slider-thumbs {
+            max-width: 100%;
+            height: 200px;
+        }
+    }
 }
 @media (max-width: 840px){
     .mailing{
@@ -308,6 +340,18 @@
             width: calc();
         }
     }
+    .breadcrumbs{
+        padding: 30px 15px;
+        &__list{
+            flex-wrap: wrap;
+        }
+        &__item{
+            margin-bottom: 10px;
+        }
+    }
+    .product{
+        margin-bottom: 60px;
+    }
 }
 @media (max-width: 620px){
     .category{
@@ -395,6 +439,14 @@
             height: 350px;
         }
     }
+    .product{
+        &__slider-gallery {
+            height: 400px;
+        }
+        &__slider-thumbs {
+           height: 90px;
+        }
+    }
 }
 
 @media (max-width: 450px){
@@ -422,6 +474,15 @@
         }
         &__info-item{
             display: block;
+        }
+    }
+    .product-description{
+        &__btn-buy{
+            margin-bottom: 15px;
+            width: 100%;
+        }
+        &__btn-basket{
+            width: 100%;
         }
     }
 }
@@ -452,6 +513,16 @@
     .category{
         &__item{
             width: calc(100% - 30px);
+        }
+    }
+    .breadcrumbs{
+        &__list{
+            display: block;
+        }
+        &__item{
+            &::before{
+                display: none;
+            }
         }
     }
 }
