--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -717,6 +717,7 @@ body.lock{
     &__slider-big-img{
         width: 100%;
         height: 100%;
+        object-fit: cover;
     }
     &__slider-litle-img{
         height: 100%;
