--- a/app/scss/media.scss
+++ b/app/scss/media.scss
@@ -57,6 +57,7 @@
         }
         &__slider-gallery{
             height: 400px;
+            margin-bottom: 20px;
         }
     }
     .product-description{
@@ -65,6 +66,7 @@
         }
     }
 }
+
 @media (max-width: 950px){
     .logo{
         padding-left: 0;
@@ -203,14 +205,16 @@
             margin-bottom: 40px;
             max-width: 100%;
             margin-right: 0;
+            margin-bottom: 25px;
         }
         &__slider-gallery {
            max-width: 100%;
-           height: 600px;
+           height: 350px;
+           margin-bottom: 15px;
         }
         &__slider-thumbs {
             max-width: 100%;
-            height: 200px;
+            height: 120px;
         }
     }
 }
@@ -236,7 +240,7 @@
     }
 }
 
-@media (max-width: 768px){
+@media (max-width: 769px){
     .top{
         margin-bottom: auto;
         &__btn{
@@ -288,6 +292,8 @@
         }
         &__item-img{
             width: 100%;
+            height: 450px;
+            object-fit: cover;
         }
     }
     .gallery{
@@ -351,6 +357,13 @@
     }
     .product{
         margin-bottom: 60px;
+    }
+    .product-description{
+        border: none;
+        padding: 0;
+        &__inner{
+            padding: 20px 10px;
+        }
     }
 }
 @media (max-width: 620px){
@@ -484,10 +497,24 @@
         &__btn-basket{
             width: 100%;
         }
+        &__title,
+        &__tags,
+        &__text,
+        &__price{
+            margin-bottom: 20px;
+        }
+        &__tags{
+            padding-bottom: 20px;
+        }
+    }
+    .blog{
+        &__item-img{
+            height: 280px;
+        }
     }
 }
 
-@media (max-width: 375px){
+@media (max-width: 376px){
     .logo{
         flex: 0 0 170px;
     }
@@ -509,6 +536,9 @@
         &__popup-imgbtn{
             width: 80%;
         }
+        &__item-popupimg{
+            height: 320px;
+        }
     }
     .category{
         &__item{
@@ -523,6 +553,17 @@
             &::before{
                 display: none;
             }
+        }
+    }
+    .blog{
+        &__item-img{
+            height: 230px;
+        }
+    }
+    .product{
+        &__slider-gallery {
+            height: 280px;
+            margin-bottom: 10px;
         }
     }
 }
